2007-02-13  Simon Goodall  <libwfut@simongoodall.co.uk>

	* Makefile.am: Install pkg-config file.

2007-02-13  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/Makefile.am, libwfut/tinyxml.cpp, libwfut/tinystr.cpp,
	  libwfut/tinyxmlerror.cpp, libwfut/tinyxmlparser.cpp, 
	  libwfut/tinystr.h, libwfut/tinyxml.h: Added tinyxml to the main source
	  tree to avoid linking problems when built as a static library.

	* Makefile.am: Remove tinyxml subdir.

	* configure.ac: Removed tinyxml subdir. Fixed LIBWFUT_LIBS declaration.
	  Added libwfut-0.1.pc to build.

	* libwfut-0.1.pc.in: Added pkg-config file.

2007-02-11  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/IO.cpp: Fixed curl handle leak.

2007-02-11  Simon Goodall  <libwfut@simongoodall.co.uk>

	* configure.ac: Added check for zlib.

2007-02-11  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/IO.cpp, libwfut/IO.h: Added new downloadFile function which
	  takes a FILE * instead of a filename.

	* libwfut/WFUT.cpp: Reworked the getFileList and getChannelList
	  functions to use more cross-platform functions. The files are now 
	  downloaded into a tmpfile and then read into memory before parsing.
	  This avoids using *nix only functions.

2007-02-11  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/IO.cpp: Add in win32 check for different usage of mkdir on 
	  win32 platforms.

2007-02-10  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/WFUT.cpp, libwut/WFUT.h: Added a function to queue a single
	  FileObject for updating.

	* libwfut/IO.cpp: Some cleanups.

2007-02-10  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/WFUT.cpp, libwfut/WFUT.h: Commented the header file. Added an
	  enum to describe the returned error codes.

2007-02-10  Simon Goodall  <libwfut@simongoodall.co.uk>

	*  configure.ac, tools/Makefile.am: Added pkgconfig check for curl.
	   Removed hardcoded link to curl.

2007-02-09  Simon Goodall  <libwfut@simongoodall.co.uk>
