@@ -15,7 +15,7 @@ AC_PROG_CXX
 AC_DISABLE_FAST_INSTALL
 AC_PROG_LIBTOOL
 
-CXXFLAGS="$CXXFLAGS -Wall -ansi -DTIXML_USE_STL=1"
+CXXFLAGS="$CXXFLAGS -Wall -DTIXML_USE_STL=1"
 
 AC_LANG_PUSH(C++)
 
